# libQGravatar

./: CMakeLists.txt
lib/: CMakeLists.txt  QtGravatarAbstractCache.cpp  QtGravatarAbstractCache.h  QtGravatarApi.h  QtGravatarManager.cpp  QtGravatarManager.h  QtGravatarManager_p.h  QtGravatarMemoryCache.cpp  QtGravatarMemoryCache.h
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
